--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is your new Play application
+play-api-connect
 =================================
 
-This file will be packaged with your application, when using `activator dist`.
+This project is a sandbox to test out API calls to external resources.
